29-AGIC-Watch-Namespaces/02-app2-production-kube-manifests/01-NginxApp2-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-nginx-deployment
  labels:
    app: app2-nginx 
  namespace: production    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2-nginx
  template:
    metadata:
      labels:
        app: app2-nginx
    spec:
      containers:
        - name: app2-nginx
          image: ghcr.io/stacksimplify/kube-nginxapp2:1.0.0
          ports:
            - containerPort: 80
