29-AGIC-Watch-Namespaces/02-app2-production-kube-manifests/02-NginxApp2-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-nginx-clusterip-service
  labels:
    app: app2-nginx
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: app2-nginx
  ports:
    - port: 80
      targetPort: 80
