29-AGIC-Watch-Namespaces/02-app2-production-kube-manifests/03-Ingress-app2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app2
  namespace: production
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80
